clean code in organizer